{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 543,
  "lineage": "14d11c53-a768-e1be-80f8-0c0d1f0ac2b5",
  "resources": [
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06862a6ef1260bb02",
            "arn": "arn:aws:ec2:ap-southeast-2:216659404274:instance/i-0cdf73d8b5c0f190d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "dockerzon-instance-profile",
            "id": "i-0cdf73d8b5c0f190d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dockerzon-ecs",
            "monitoring": false,
            "primary_network_interface_id": "eni-0704cd349cd77183d",
            "private_dns": "ip-10-0-1-242.ap-southeast-2.compute.internal",
            "private_ip": "10.0.1.242",
            "public_dns": "ec2-54-252-254-16.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "54.252.254.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-018a694565e5c0852",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-09847148c0ef7a66f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d01e5855712bc5c1",
            "tags": {
              "Name": "dockerzon-00"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09847148c0ef7a66f"
            ]
          },
          "dependencies": [
            "module.instances.aws_iam_instance_profile.instance-profile",
            "module.instances.aws_iam_role.instance-profile-role"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06862a6ef1260bb02",
            "arn": "arn:aws:ec2:ap-southeast-2:216659404274:instance/i-033b1f5fe6e8230a1",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "dockerzon-instance-profile",
            "id": "i-033b1f5fe6e8230a1",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dockerzon-ecs",
            "monitoring": false,
            "primary_network_interface_id": "eni-0c3e5af05480e8616",
            "private_dns": "ip-10-0-3-28.ap-southeast-2.compute.internal",
            "private_ip": "10.0.3.28",
            "public_dns": "ec2-13-236-191-164.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.236.191.164",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-006104ba81d99dcbf",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-09847148c0ef7a66f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09d6e839d44e7ea34",
            "tags": {
              "Name": "dockerzon-01"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09847148c0ef7a66f"
            ]
          },
          "dependencies": [
            "module.instances.aws_iam_instance_profile.instance-profile",
            "module.instances.aws_iam_role.instance-profile-role"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "dockerzon-lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:216659404274:loadbalancer/app/dockerzon-lb-terraform/d80743c2652cc9d5",
            "arn_suffix": "app/dockerzon-lb-terraform/d80743c2652cc9d5",
            "dns_name": "dockerzon-lb-terraform-1354136791.ap-southeast-2.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:216659404274:loadbalancer/app/dockerzon-lb-terraform/d80743c2652cc9d5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dockerzon-lb-terraform",
            "security_groups": [
              "sg-0b7429161a2cc32ae"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09d6e839d44e7ea34"
              },
              {
                "subnet_id": "subnet-0d01e5855712bc5c1"
              }
            ],
            "subnets": [
              "subnet-09d6e839d44e7ea34",
              "subnet-0d01e5855712bc5c1"
            ],
            "tags": {
              "Name": "dockerzon-lb-terraform"
            },
            "vpc_id": "vpc-01f2c79f328ce1caf",
            "zone_id": "Z1GM3OXH4ZPM65"
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "dockerzon-lb-http-listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:216659404274:listener/app/dockerzon-lb-terraform/d80743c2652cc9d5/1b0fe00a69a26b3a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:216659404274:listener/app/dockerzon-lb-terraform/d80743c2652cc9d5/1b0fe00a69a26b3a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:216659404274:loadbalancer/app/dockerzon-lb-terraform/d80743c2652cc9d5",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.alb.aws_lb.dockerzon-lb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "dockerzon-lb-https-listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:216659404274:listener/app/dockerzon-lb-terraform/d80743c2652cc9d5/eec1e6ebc0748551",
            "certificate_arn": "arn:aws:acm:ap-southeast-2:216659404274:certificate/36b4b414-facc-46d3-8943-16339d444936",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:216659404274:targetgroup/dockerzon-lb-tg/a6bbc24870fd51c8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:216659404274:listener/app/dockerzon-lb-terraform/d80743c2652cc9d5/eec1e6ebc0748551",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:216659404274:loadbalancer/app/dockerzon-lb-terraform/d80743c2652cc9d5",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "dependencies": [
            "module.alb.aws_lb.dockerzon-lb",
            "module.alb.aws_lb_target_group.dockerzon-lb-tg"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "dockerzon-lb-tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:216659404274:targetgroup/dockerzon-lb-tg/a6bbc24870fd51c8",
            "arn_suffix": "targetgroup/dockerzon-lb-tg/a6bbc24870fd51c8",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 6,
                "matcher": "200",
                "path": "/health_check",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:216659404274:targetgroup/dockerzon-lb-tg/a6bbc24870fd51c8",
            "lambda_multi_value_headers_enabled": false,
            "name": "dockerzon-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "dockerzon-lb-tg-terraform"
            },
            "target_type": "instance",
            "vpc_id": "vpc-01f2c79f328ce1caf"
          }
        }
      ]
    }
  ]
}